Fixed spacing and position.

--- a/css/silk.css
+++ b/css/silk.css
@@ -3,8 +3,9 @@
 	min-width: 16px;
 	min-height: 16px;
 	max-width: 16px;
-	 max-height: 16px;
+    max-height: 16px;
 	display: inline-block;
+    position: relative;
 }
 
 .silk.silk-accept {
